slogwithin; unsafe timeout
